[project]
name = "estoque-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "GuilhermeAntunes",email = "guilherme.antunes.silva@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "langgraph (>=0.6.4,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-google-vertexai (>=2.0.28,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-google-genai (==2.1.6)",
    "langchain-groq (>=0.3.7,<0.4.0)"
]

[tool.poetry]
packages = [{include = "estoque_ai", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'fastapi dev src/estoque_ai/app.py'
test = 'pytest -s -x --cov=src/estoque_ai -vv'
pre_format = 'ruff check --fix'
pre_test = 'task lint'
post_test = 'coverage html'